Bug 157192 - PIVOTTABLE: 'Sort by' drop-down list grayed out by default on the (advanced) Data Field options dailog
Summary: PIVOTTABLE: 'Sort by' drop-down list grayed out by default on the (advanced) ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords: regression
Depends on:
Blocks: Pivot-Table
  Show dependency treegraph
 
Reported: 2023-09-11 16:54 UTC by Adrián L.
Modified: 2023-09-25 20:39 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adrián L. 2023-09-11 16:54:10 UTC
Description:
Apparently the drop-down list on data field options dialog shows up straight disabled by default, so there is no way to pick any field dragged into either row or column area. 

Steps to Reproduce:
1.Create any table with at least 2 columns fields, one with values.
2.Generate a pivot table. 
3.Drag first field into either row or column and the last one into data.
4.Double-clik on the first field, select options

Actual Results:
the 'sort by' drop-down list displays off.

Expected Results:
the List should be enabled to pick whatever field you want to sort your pivot table


Reproducible: Always


User Profile Reset: No

Additional Info:
Notice that, checking the 'maunal' option on the right side, will enable the drop-down list instead of actually disabling it.

This bug is present in any Libreoffice 7 version but not on previous ones (6 and before).
Comment 1 m_a_riosv 2023-09-11 18:48:19 UTC
Reproducible with
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8740a1db21298be2dc81a8388a2df3aa8451531c
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded Jumbo

In any option Ascending/Descending/Manual, should be possible to select the field to sort.

Regression, last working for me
Versión: 6.4.7.2 (x64)
Id. de compilación: 639b8ac485750d5696d7590a72ef1b496725cfb5
Subprocs. CPU: 16; SO: Windows 10.0 Build 22621; Repres. IU: GL; VCL: win; 
Configuración regional: es-ES (es_ES); Idioma de IU: es-ES Calc: CL
Comment 2 Xisco Faulí 2023-09-12 07:54:09 UTC
reproduced in

Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: c94961c6869c34b3874d21cfaa5ec1488609acfe
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

but not in

Version: 6.1.7.0.0+
Build ID: 5b3765f4d881e7ddefd0c4aad6886a46f000b4fc
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3; 
Locale: es-ES (es_ES.UTF-8); Calc: group threaded
Comment 3 Xisco Faulí 2023-09-12 14:35:01 UTC
This was fixed today by

author	Dennis Francis <dennis.francis@collabora.com>	2023-09-11 17:49:32 +0530
committer	Dennis Francis <dennis.francis@collabora.com>	2023-09-12 16:12:18 +0200
commit b8f6f91f476f1c3f93bb44265381305f6f02b161 (patch)
tree 23498811ff1cfee402a37f647becf8cd4cdeb583
parent 43677cb0d95de06bea0f08e87ccfa3230dc8bd6b (diff)
sc:pivot allow sort by selection in non-manual mode
Comment 4 Commit Notification 2023-09-13 08:04:09 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/0b645cf5696be172104b546e4225cb90b27693ce

tdf#157192: sc:pivot allow sort by selection in non-manual mode

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.