tdf#157192: sc:pivot allow sort by selection in non-manual mode

Otherwise it is currently impossible to sort a field by its data
summarization values.

The RadioClickHdl is now doing nothing hence is removed with this
change.

Change-Id: I76064ce05e5b996ad96f596524be351708ef35e4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156747
Tested-by: Jenkins
Reviewed-by: Dennis Francis <dennis.francis@collabora.com>
(cherry picked from commit b8f6f91f476f1c3f93bb44265381305f6f02b161)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156870
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>