sc/source/ui/inc/pvfundlg.hxx
@@ -150,7 +150,6 @@ private:
     /** Searches for a listbox entry, starts search at specified position. */
     sal_Int32 FindListBoxEntry( const weld::ComboBox& rLBox, std::u16string_view rEntry, sal_Int32 nStartPos ) const;
 
-    DECL_LINK( RadioClickHdl, weld::Toggleable&, void );
     DECL_LINK( CheckHdl, weld::Toggleable&, void );
     DECL_LINK( SelectHdl, weld::ComboBox&, void );
     DECL_LINK( ButtonClicked, weld::Button&, void );
